--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
-header{
-	background-color: black;
-	img {
-		height: 33vh;
-		object-fit: cover;
-		width: 100%;
-		overflow: hidden;
-	}
+.building{
+	margin-left: 10%;
+}
+
+#ascii-art {
+    font-family: monospace;
+    font-size: 1.15vw; 
+    white-space: pre-wrap; 
+    word-wrap: break-word; 
+    text-align: center;
+    max-width: 100%;
+    overflow-x: auto; 
+	cursor: crosshair;
 }
