--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
+body {
+	overflow-x: hidden;
+}
+
 .building{
-	margin-left: 10%;
+	/* margin-left: 10%; */
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 #ascii-art {
     font-family: monospace;
-    font-size: 1.15vw; 
+    font-size: 1vw;
     white-space: pre-wrap; 
     word-wrap: break-word; 
-    text-align: center;
-    max-width: 100%;
-    overflow-x: auto; 
+    /* text-align: center; */
+    overflow-x: hidden; 
 	cursor: crosshair;
+	transform: scale(1.5);
+	transform-origin: center;
+	max-width: 100%;
 }
