--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,130 @@
-body {
-	overflow-x: hidden;
+:root {
+	--base-size: 10px;
+	--light-grey: rgb(234, 234, 231);
 }
 
-.building{
-	/* margin-left: 10%; */
-	max-width: 100vw;
+body {
 	overflow-x: hidden;
+	background-color: var(--light-grey);
+	font-family: monospace;
+	font-size: var(--base-size);
+}
+
+.content {
+    position: relative;
+    display: inline-block;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 #ascii-art {
     font-family: monospace;
     font-size: 1vw;
-    white-space: pre-wrap; 
-    word-wrap: break-word; 
-    /* text-align: center; */
-    overflow-x: hidden; 
-	cursor: crosshair;
-	transform: scale(1.5);
-	transform-origin: center;
-	max-width: 100%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-x: hidden;
+    cursor: crosshair;
+    transform-origin: top left;
+    max-width: 100%;
+    position: relative; 
+	z-index: -10;
+}
+
+.item-container {
+    position: absolute; 
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%); 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    padding: 5px;
+    border-radius: 3px;
+	z-index: 1;
+}
+
+#txtfile {
+    width: 50px;
+    height: 50px;
+    background: var(--light-grey);
+}
+
+figcaption {
+    font-size: 1rem;
+}
+
+#fake-window-wrapper {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    background: white;
+    border: 1px solid black;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    flex-direction: column;
+}
+
+#fake-window {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute; /* Make sure it can move freely */
+}
+
+#fake-window-header {
+    background: black;
+    color: white;
+    padding: 5px;
+    cursor: grab;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#close-window {
+    cursor: pointer;
+}
+
+#fake-window-content {
+    padding: 10px;
+    background: white;
+}
+
+
+.window-header {
+    background: #ddd;
+    padding: 5px;
+    cursor: grab;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    width: 100%;
+}
+
+.window-header button {
+    background: none;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.window-content {
+    padding: 10px;
+    white-space: pre-wrap;
+}
+
+.hidden {
+    display: none;
+}
+
+
+@media (min-width: 600px){
+	#ascii-art{
+		transform: none;
+	}
 }
