--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* sorry this is messy will arrange later! */
+
 :root {
 	--base-size: 10px;
 	--light-grey: rgb(234, 234, 231);
@@ -31,7 +33,7 @@ body {
 	opacity: 50%;
 }
 
-.item-container {
+.item-container:first-child {
     position: absolute; 
     top: 5%;
     left: 50%;
@@ -46,9 +48,25 @@ body {
 	cursor: pointer;
 }
 
-#txtfile {
+#txtfile, #picfile {
     width: 50px;
     height: 50px;
+}
+
+
+.item-container:nth-child(2) {
+    position: absolute; 
+    top: 20%;
+    left: 30%;
+    transform: translateX(-50%); 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    padding: 5px;
+    border-radius: 3px;
+	z-index: 1;
+	cursor: pointer;
 }
 
 figcaption {
@@ -97,7 +115,6 @@ figcaption {
     background: white;
 }
 
-
 .window-header {
     background: #dddd;
     padding: 5px;
@@ -121,9 +138,57 @@ figcaption {
     white-space: pre-wrap;
 }
 
-.hidden {
+#fake-window-wrapper-image {
     display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: 50%;
+    padding: 0; 
+    border-radius: 10px;
 }
+
+#fake-window-image {
+    background-color: black;
+    width: 100%;
+    height: auto; 
+    max-height: 500px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.image-window-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background: #dddd;
+    font-weight: bold;
+}
+
+
+#close-window-image {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.image-window-content {
+    padding: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.image-window-content img {
+    max-width: 100%; 
+    max-height: 100%; 
+    object-fit: contain; 
+}
+
 
 
 @media (min-width: 600px){
