--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
     position: absolute; 
     top: 35%;
     left: 50%;
+    width: 100%;
     transform: translateX(-50%); 
     display: flex;
     flex-direction: column;
@@ -85,7 +86,8 @@ body {
 .item-container:nth-child(4) {
     position: absolute; 
     top: 50%;
-    left: 20%;
+    left: 25%;
+    width: 100%;
     transform: translateX(-50%); 
     display: flex;
     flex-direction: column;
