--- a/assets2/style.css
+++ b/assets2/style.css
@@ -80,8 +80,15 @@ footer {
   
   .item {
 	border-bottom: 2px solid black; 
-	height: 80px; 
+	height: auto; 
   }
 
+  h3 {
+	margin: 2rem;
+  }
+
+  .block-type {
+	margin: 2rem;
+  }
 	
 	
