--- a/assets2/style.css
+++ b/assets2/style.css
@@ -126,14 +126,23 @@ footer {
   .item {
 	border-bottom: 2px solid black; 
 	height: auto; 
+	display: flex;
   }
+
+  .block-image {
+	width: 50px;
+    height: 50px;
+    display: block;
+	margin: 1rem;
+}
 
   .item:nth-child(50){
 	border-bottom: none;
   }
 
   h3 {
-	margin: 2rem;
+	margin: 1rem;
+	padding-top: 0.5rem;
   }
 
   .block-type {
