--- a/assets2/style.css
+++ b/assets2/style.css
@@ -148,7 +148,7 @@ footer {
 	margin: 2rem;
   }
 	
-/* link pop up */
+/* pop up */
 #link-popup {
     position: fixed;
     top: 0;
@@ -175,47 +175,57 @@ footer {
     max-width: 800px;
     width: 60%;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     box-sizing: border-box;
+    max-height: 80vh;
     text-align: center;
-    justify-content: center; 
-    align-items: center; 
+    align-items: center;
 }
 
-#close-link-popup {
-    position: absolute;
-	top: 0px;
-    right: 15px;
-    font-size: 3rem;
+#link-popup.text-popup .popup-content {
+    text-align: left;
+    align-items: flex-start;
 }
 
 #popup-title {
     font-size: 1.8rem;
     margin-bottom: 1rem;
-    text-align: center; 
+    text-align: center;
+}
+
+#close-link-popup {
+    position: absolute;
+    top: 0px;
+    right: 15px;
+    font-size: 3rem;
 }
 
 #popup-image {
     display: flex;
     justify-content: center; 
-    align-items: center; 
+    align-items: center;
     width: 100%;
-    margin: 1.5rem;
+    margin: 1.5rem 0;
 }
 
 #popup-image img {
-    max-width: 100%;  
-    height: auto; 
-    max-height: 300px; 
+    width: auto;            
+    max-width: 100%;
+    max-height: 300px;
     display: block;
+    margin: 0 auto;
 }
-
 
 #popup-description {
     font-size: 1rem;
     line-height: 1.5;
     margin-bottom: 1rem;
-	margin-top: 2rem;
+    margin-top: 2rem;
+    max-height: 50vh; 
+    overflow-y: auto;  
+    width: 100%; 
+    padding-right: 10px;     
+    text-align: left;        
 }
 
 #popup-link {
@@ -226,4 +236,46 @@ footer {
 
 #popup-link:hover {
     text-decoration: underline;
+}
+
+/* Attachment Pop-up */
+#attachment-popup .popup-content {
+    background: black;
+    padding: 2rem;
+    max-width: 800px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    text-align: center;
+    align-items: center;
+    max-height: 80vh;
+}
+
+/* Styling for the audio element inside pop-up */
+#popup-attachment audio {
+    width: 100%;
+    margin: 1rem 0;
+}
+
+/* Styling for the attachment link */
+.attachment-link {
+    color: var(--color-blue);
+    text-decoration: none;
+}
+
+.attachment-link:hover {
+    text-decoration: underline;
+}
+
+/* Optional: Styling for the "PDF" and "Audio" labels */
+#popup-attachment em {
+    font-style: italic;
+    color: #888;
+}
+
+audio {
+    width: 100%; /* Adjust to whatever size you need */
+    max-width: 600px; /* Example maximum width */
+    height: 40px; /* Adjust height if necessary */
 }
