--- a/assets2/style.css
+++ b/assets2/style.css
@@ -181,7 +181,7 @@ footer {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    max-height: 80vh;
+    max-height: 90vh;
     text-align: center;
     align-items: center;
 }
@@ -221,7 +221,7 @@ footer {
 }
 
 #popup-description {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5;
     margin-bottom: 1rem;
     margin-top: 2rem;
@@ -240,4 +240,38 @@ footer {
 
 #popup-link:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+	main {
+		display: flex;
+		flex-direction: column;
+	}	
+
+	#website-info {
+	width: 100vw;
+	position: relative;
+	height: 100vh;
+	overflow-y: visible;
+	}
+
+	#ascii-text{
+	transform: scale(0.85);
+	}
+
+	h1 {
+		height: 70vh;
+		margin-right: 200vh;
+		}
+
+	#content{
+	margin-top: 10rem;
+	min-width: 100vw;
+	position: relative;
+	overflow-y: visible;
+	}
+
+	.channel-blocks {
+		border-left: none;
+	}
 }
