--- a/assets2/style.css
+++ b/assets2/style.css
@@ -24,7 +24,7 @@ body {
 main {
 	display: flex;
 	flex-direction: row;
-	height: 100vh;
+	max-height: 100vh;
 }
 
 /* WEBSITE INFO */
@@ -35,6 +35,7 @@ main {
 	position: sticky;
 	top: 0;
 	overflow-y: hidden;
+	height: 90vh;
 }
 
 h1 {
