fixed about popup

--- a/assets2/style.css
+++ b/assets2/style.css
@@ -115,7 +115,7 @@ footer {
     opacity: 1;
 }
 
-.popup-content {
+.popup-about-content {
     background: black;
     padding: 2rem;
     width: 50%;
