--- a/assets/style2.css
+++ b/assets/style2.css
@@ -181,11 +181,13 @@ footer {
   height: 100vh;
   transition: left var(--transition);
   background: var(--color-grey);
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
 }
 
-/* When the wrapper is expanded, slide .main-info in */
 .wrapper-info.open .main-info {
-  left: 0;  /* Slide in from the left */
+  left: 0; 
 }
 
 h2 {
@@ -196,11 +198,26 @@ h2 {
 
 #about-description{
   text-align: left;
-  font-size: 0.8rem;
   padding: 1rem;
   padding-top: 0;
+  /* padding-bottom: 5rem; */
+  border-bottom: var(--border-style);
+  height: 70vh;
 }
 
+#channel-info-section{
+  padding: 1rem;
+  text-transform: lowercase;
+  border-bottom: var(--border-style);
+  height: 15vh;
+}
+
+#credit{
+  padding: 1rem;
+  text-transform: lowercase;
+  height: 15vh;
+
+}
 
 /* about pop-up */
 #popup {
