--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
 	--color-grey: #DDDDDD; 
 	--color-blue: #0033FF;
 	--color-purple: #800080;
+  --color-white: #f2f2f2;
 
 	/* Fonts */
 	--title-font: "Xanh Mono", serif;
@@ -14,152 +15,313 @@
 	--body-font: "JetBrains Mono", serif;
 	--body-font-weight: 400;
 	--body-font-style: normal;
+
+  /* Other */
+  --border-style: 2px dashed black;
+  --transition: 0.3s ease-in-out;  
+
 }
 
 body {
 	background: var(--color-grey);
 	font-family: var(--body-font);
 	/* overflow-y: hidden; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; 
+  flex-direction: column; 
 }
 
+
+/* MAIN */
 main {
-	display: flex;
-	flex-direction: row;
-	max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    height: 100vh;
+    align-items: center; 
+    justify-content: center; 
+}	
+
+#website-title {
+  display: flex;
+  width: 100vw;
+  position: relative;
+  max-height: 100vh;
+  overflow-y: visible;
+  align-items: center; 
+  justify-content: center; 
+  text-align: center;
+  }
+
+#ascii-text{
+  transform: scale(0.5);
+  margin-bottom: 15rem;
+  margin-left: 1.5rem;
+  font-weight: 900;
 }
 
 
-/* WEBSITE INFO */
-#website-info {
-	width: 60vw;
-	display: flex;
-	flex-direction: column;
-	position: sticky;
-	top: 0;
-	overflow-y: hidden;
-	height: 90vh;
+pre {
+  white-space: pre; 
+  font-family: monospace;
+  font-size: 1rem; 
+  line-height: 1.2;
+  font-weight: bold;
 }
 
-h1 {
-	height: 70vh;
-}
-
-#arena-link:hover{
-	cursor: pointer;
-}
-
-
+/* matter js */
 #mjs-wrapper {
 	margin: 1em; 
 	height: 100%;
   }
 
   #mjs-wrapper ul {
-	font-size: 14pt;
 	list-style: none;
 	user-select: none;
 	position: relative;
   }
 
   #mjs-wrapper li {
-	background: var(--color-grey);
-	border: 2px black;
-	border-style: dashed ;
-	display: inline-block;
-	padding: 1em;
-	cursor: pointer;
+    font-size: 0.8rem;
+    background: var(--color-grey);
+    border: 1.5px black;
+    border-style: dashed ;
+    display: inline-block;
+    padding: 1em;
+    cursor: pointer;
   }
   
   #mjs-wrapper li:hover {
-	background: #f2f2f2;
+	  background: var(--color-white);
   }
 
-nav {
-	font-size: 2rem;
-	font-weight: 200;
-	/* height: 20vh; */
+  .active {
+    background-color: var(--color-white);
+  }
+
+  button{
+    position: absolute;
+    display: flex;
+    bottom: 5vh;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  
+  #mjs-wrapper li.active {
+    background-color: var(--color-white);
+  }
+
+/* LEFT MENU */
+.wrapper-info {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 10vw;
+  overflow: hidden;
+  transition: width 0.3s ease-in-out;
+  z-index: 100;
+  border-right: var(--border-style);
 }
 
-#nav-links {
-	list-style-type: none;
-	line-height: 1.5;
+.info-bar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 10vw;
+  height: 100vh;
+  background: var(--color-grey);
+  border-left: var(--border-style);
+  color: black;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform var(--transition);
+  overflow: hidden;
 }
 
-#nav-links:hover{
-	cursor: pointer;
+.info-bar .content {
+  position: relative;
+  transform: rotate(90deg);
+  transform-origin: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  white-space: nowrap;
+  width: auto;
+  margin-top: 2.5rem;
+}
+
+footer{
+  margin-left: 13rem;
+}
+
+.wrapper-info.open {
+  width: 70vw; 
+  background: var(--color-grey);
+
+}
+
+.wrapper-info.open .info-bar {
+  transform: translateX(60vw); 
+  cursor: default;
 }
 
 footer {
-	margin-left: 1.5rem;
+  padding-left: 10rem;
+  font-size: 0.7rem;
+  padding-top: 0.2rem;
 }
 
-
-/* about pop-up */
-#popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s ease;
+.main-info {
+  position: absolute;
+  left: -500%; 
+  top: 0;
+  width: calc(100% - 10vw);  
+  height: 100vh;
+  transition: left var(--transition);
+  background: var(--color-grey);
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
 }
 
-#popup.visible {
-    visibility: visible;
-    opacity: 1;
+.wrapper-info.open .main-info {
+  left: 0; 
 }
 
-.popup-about-content {
-    background: black;
-    padding: 2rem;
-    width: 50%;
-    max-width: 500px;
-    text-align: left;
-    position: relative;
-	color: var(--color-grey);
-	position: absolute;
+h2 {
+  font-size: 1.5rem;
+  padding: 1rem;
+  text-align: left;
+  font-weight: 500;
 }
 
-#close-popup {
-    position: absolute;
-    top: 0px;
-    right: 15px;
-    font-size: 3rem;
+#about-description{
+  text-align: left;
+  padding: 1rem;
+  padding-top: 0;
+  /* padding-bottom: 5rem; */
+  border-bottom: var(--border-style);
+  height: 70vh;
 }
 
-#channel-description {
-	line-height: 1.5;
+#channel-info-section{
+  padding: 1rem;
+  text-transform: lowercase;
+  border-bottom: var(--border-style);
+  height: 15vh;
+}
+
+#credit{
+  padding: 1rem;
+  text-transform: lowercase;
+  height: 15vh;
 }
 
 
 /* CONTENT */
-#content{
-	overflow-y: auto;
-	width: 40vw;
-}
 
-.channel-blocks {
+/* .channel-blocks {
 	display: grid;
 	grid-template-columns: 1fr; 
 	grid-template-rows: repeat(auto-fill, minmax(1fr, 1fr)); 
 	height: 100vh;
-  }
-  
+  } */
+
+.wrapper-content {
+  position: fixed;
+  right: 0; 
+  top: 0;
+  height: 100vh;
+  width: 10vw; 
+  overflow: hidden;
+  transition: width var(--transition);
+  z-index: 100;
+}
+
+.content-bar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 10vw;
+  height: 100vh;
+  background: var(--color-grey);
+  border-left: var(--border-style);
+  border-right: var(--border-style);
+  color: black;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+.wrapper-content.open {
+  width: 90vw; 
+  background: var(--color-grey);
+}
+
+.wrapper-content.open .content-bar {
+  transform: translateX(-80vw); 
+  cursor: default;
+}
+
+.channel-blocks {
+  position: absolute;
+  right: -500%; 
+  top: 0;
+  width: calc(100% - 10vw);
+  height: 100vh;
+  transition: right var(--transition);
+  background: var(--color-grey);
+  font-size: 0.8rem;
+  overflow-y: auto;
+  display: grid;
+	grid-template-columns: 1fr; 
+	grid-template-rows: repeat(auto-fill, minmax(1fr, 1fr)); 
+}
+
+.wrapper-content.open .channel-blocks {
+  right: 0; 
+}
+
+#content-bar-title{
+  position: relative;
+  transform: rotate(90deg);
+  transform-origin: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  white-space: nowrap;
+  width: auto;
+  margin-top: 5.5rem;
+  padding-bottom: 0.25rem;
+}
+
+.info-bar:hover, .content-bar:hover{
+  background-color: var(--color-white);
+  transition: var(--transition);
+}
+
   .item {
-	border-bottom: 2.5px dashed black; 
-	border-left: 2.5px dashed black; 
+	border-bottom: var(--border-style);
 	height: auto; 
 	display: flex;
   }
 
   .item:hover{
 	cursor: pointer;
+  background-color: var(--color-white);
+  transition: var(--transition);
   }
 
   .block-image {
@@ -168,32 +330,22 @@ footer {
     display: block;
 	margin: 1rem;
 }
-/* 
-  .item:nth-child(50){
-	border-bottom: none;
-  } */
-
-  h3 {
-	margin: 1rem;
-	padding-top: 0.5rem;
-  }
 
   .block-type {
 	margin: 2rem;
   }
-	
-/* pop up */
-#hide-this {
-	display: none;
-}
 
-#link-popup {
+  /* pop up */
+  #hide-this {
+    display: none;
+  }
+
+  #link-popup {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /* background: rgba(0, 0, 0, 0.5); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -202,20 +354,6 @@ footer {
     transition: opacity 0.3s ease;
 }
 
-#popup-content {
-    position: absolute;
-    background: black;
-    padding: 1.5rem;
-    max-width: 400px;
-    width: auto;
-    max-height: 80vh;
-    color: white;
-    text-align: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease-in-out;
-    border-radius: 10px;
-}
 
 .hidden {
     visibility: hidden;
@@ -231,19 +369,19 @@ footer {
 
 .popup-content {
     position: absolute;
-    background: black;
-    padding: 1.5rem;
+    background: var(--color-white);
+    padding: 1rem;
     max-width: 400px;
     width: auto;
-    max-height: 80vh;
-    color: white;
+    color: black;
     text-align: center;
     opacity: 0;
-    border-radius: 10px;
     cursor: grab;
-    z-index: 1; 
-    transition: opacity 0.3s ease-in-out;
-	overflow: auto;
+    z-index: 1000; 
+    transition: opacity var(--transition);
+	  overflow: auto;
+    border: var(--border-style);
+    overflow-y: hidden;
 }
 
 .close-link-popup {
@@ -256,6 +394,11 @@ footer {
 
 .popup-content:active {
     cursor: grabbing;
+}
+
+
+.popup-flex-container p{
+  margin-bottom: 0.5rem;
 }
 
 .popup-flex-container picture {
@@ -307,6 +450,26 @@ iframe[src*="youtube"] {
 	height: 100% !important;
 }
 
+audio{
+  display: block;
+    width: 100% !important;
+    height: 40px !important;
+    border: var(--border-style);
+    margin-top: 0.5rem;
+}
+
+video{
+   display: block;
+    width: 100% !important;
+    height: 70% !important;
+}
+
+.attachment-type, .attachment-link {
+  text-align: center;
+  padding: 1rem;
+}
+
+
 #close-link-popup {
     position: absolute;
     top: 0px;
@@ -319,7 +482,7 @@ iframe[src*="youtube"] {
     justify-content: center; 
     align-items: center;
     width: 100%;
-    margin: 1.5rem 0;
+    /* margin: 1.5rem 0; */
 }
 
 #popup-image img {
@@ -333,17 +496,18 @@ iframe[src*="youtube"] {
 .popup-flex-container{
 	font-size: 0.8rem;
     line-height: 1.5;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
+    /* margin-bottom: 1rem; */
+    /*margin-top: 2rem; */
     max-height: 50vh; 
     overflow-y: auto;  
     width: 100%; 
     padding-right: 10px;     
     text-align: left;  
+    padding: 1rem;
 }
 
 #popup-description {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     line-height: 1.5;
     margin-bottom: 1rem;
     margin-top: 2rem;
@@ -368,87 +532,74 @@ iframe[src*="youtube"] {
 	text-align: center;
 }
 
-@media (max-width: 600px) {
-	main {
-		display: flex;
-		flex-direction: column;
-		overflow-x: hidden;
-	}	
+.arena-link {
+  font-size: 0.8rem;
+  font-style: italic;
+  border: var(--border-style);
+  padding: 0.5rem;
+}
 
-	#website-info {
-	width: 100vw;
-	position: relative;
-	height: 100vh;
-	overflow-y: visible;
-	/* flex-direction: row; */
-	}
+h3{
+  font-weight: 600;
+  margin: 1rem;
+  padding-top: 0.5rem;
+  font-size: 1rem;
+}
 
-	#ascii-text{
-	transform: scale(0.5);
-	}
 
-	h1 {
-		/* height: 70vh; */
-		/* margin-right: 200vh; */
-		height: 30vh;
-		/* padding-right: 12rem; */
-		/* padding-top: 15rem; */
-		margin-right: 22rem;
-	}
+/* DESKTOP MEDIA QUERY */
+@media (min-width: 600px){
 
-	nav{
-		font-size: 1rem;
-	}
+  #ascii-text{
+    transform: scale(1.1);
+  }
 
-	footer{
-		font-size: 0.7rem;
-		height: 30vh;
-	}
+  .info-bar, .content-bar{
+    width: 5vw;
+  }
 
-	#content{
-	margin-top: 10rem;
-	min-width: 100vw;
-	position: relative;
-	overflow-y: visible;
-	}
+  .wrapper-info, .wrapper-content{
+    width: 5vw;
+  }
 
-    .item {
-        border-left: none;
+  .wrapper-info.open {
+    width: 50vw; 
+    background: var(--color-grey);
+  
+  }
+  
+  .wrapper-info.open .info-bar {
+    transform: translateX(45vw); 
+    cursor: default;
+  }
+
+  .main-info{
+    width: calc(100% - 5vw);
+  }
+
+  .wrapper-content.open {
+    width: 50vw; 
+    background: var(--color-grey);
+  }
+  
+  .wrapper-content.open .content-bar {
+    transform: translateX(-45vw); 
+    cursor: default;
+  }
+
+  .channel-blocks {
+    width: calc(100% - 5vw);
+  }
+
+   p {
+      font-size: 1rem;
     }
 
-	.channel-blocks {
-		border-left: none;
-	}
+    #mjs-wrapper li {
+      font-size: 1rem;
+    }
 
-	h3{
-		font-size: 1rem;
-	}
-
-	.channel-blocks{
-		border-top: 2.5px dashed black; 
-	}
-
-	.popup-content {
-	 width: auto;
-	}
-
-	h2 {
-		font-size: 1.5rem;
-	}
-	
-	#channel-description{
-		font-size: 0.8rem;
-	}
-
-	#link-popup .popup-content{
-		width: auto;
-		height: auto;
-	}
-
-	#popup-title {
-		font-size: 1.2rem;
-		/* margin-bottom: 0.5rem; */
-		text-align: center;
-	}
-
+    h3{
+      font-size: 1.1rem;
+    }
 }
